--- a/css/media.css
+++ b/css/media.css
@@ -2,18 +2,6 @@
   .container {
     max-width: 448px;
   }
-  .hero {
-    background-image: var(--bg-gradient),
-      url("../images/mobil-slider-img\ 3.jpg");
-  }
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .hero {
-      background-image: var(--bg-gradient),
-        url("../images/mobil-slider-img\ 3\ -2x.jpg");
-    }
-  }
   .prices {
     background-image: url("../images/mobil-prices-bg.png");
   }
@@ -105,17 +93,16 @@
     background-color: currentColor;
   }
   .right-side {
-    width: 100%;
-    height: 680px;
-    background-image: var(--bg-gradient), url("../images/tab-slide-1.webp");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    /* width: 100%; */
+    margin: 0;
+  }
+  .swiper {
+    min-width: 573px;
   }
   .hero-content {
     width: 360px;
-    padding-top: 272px;
-    padding-left: 98px;
+    top: 272px;
+    left: 98px;
   }
   .hero-slogan {
     min-width: 360px;
@@ -290,9 +277,12 @@
     width: 100px;
     padding-left: 27px;
   }
+  .swiper {
+    min-width: 1070px;
+  }
   .hero-content {
     width: 444px;
-    padding-left: 100px;
+    left: 100px;
   }
   .hero-title {
     font-size: 72px;
